fix overzealous style overrides, reduce whitespace in picker

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -64,11 +64,11 @@ button:hover {
 }
 
 input {
-  border: 1px solid var(--white) !important;
-  border-radius: 2px !important;
-  background: var(--black) !important;
-  color: var(--white) !important;
-  padding: 4px 8px !important;
+  border: 1px solid var(--white);
+  border-radius: 2px;
+  background: var(--black);
+  color: var(--white);
+  padding: 4px 8px;
 }
 
 ul {
@@ -242,6 +242,14 @@ canvas {
 
 .emoji-picker__wrapper {
   transform: translate(253px, -32px) !important;
+}
+
+.emoji-picker.dark .emoji-picker__search {
+  background: var(--black) !important;
+}
+
+.emoji-picker__content {
+  height: auto !important;
 }
 
 /* SCROLL BARS */
